Hide the scrollbar to prevent a background shift.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -176,6 +176,12 @@ textarea {
 
 html {
   box-sizing: border-box;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, and Opera */
 }
 
 *,
